removed exposure of sensitive family member details in booking responses and add environment in http client for prod-google-cloud